--- a/Services/AI professional/AISoftware.html
+++ b/Services/AI professional/AISoftware.html
@@ -524,11 +524,11 @@
             </div>
           </div>
 
-          <div>
+         <div>
             <h4 class="footer-title">Quick Links</h4>
-            <a href="about.html" class="footer-link">About</a>
-            <a href="services.html" class="footer-link">Services</a>
-            <a href="contact.html" class="footer-link">Contact</a>
+            <a href="../../pages/about.html" class="footer-link">About</a>
+            <a href="../../pages/services.html" class="footer-link">Services</a>
+            <a href="../../pages/contact.html" class="footer-link">Contact</a>
             <a href="#" class="footer-link">Careers</a>
           </div>
 
@@ -549,3 +549,4 @@
     </footer>
 </body>
 </html>
+
