--- a/Services/Digital Marketing/DigitalMarketing.html
+++ b/Services/Digital Marketing/DigitalMarketing.html
@@ -572,13 +572,13 @@
                         <a href="https://api.whatsapp.com/send/?phone=9019225051&text&type=phone_number&app_absent=0" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
-                <div class="footer-col footer-links">
-                    <h4 class="footer-title">Quick Links</h4>
-                    <a href="about.html" class="footer-link">About</a>
-                    <a href="services.html" class="footer-link">Services</a>
-                    <a href="contact.html" class="footer-link">Contact</a>
-                    <a href="#" class="footer-link">Careers</a>
-                </div>
+              <div>
+            <h4 class="footer-title">Quick Links</h4>
+            <a href="../../pages/about.html" class="footer-link">About</a>
+            <a href="../../pages/services.html" class="footer-link">Services</a>
+            <a href="../../pages/contact.html" class="footer-link">Contact</a>
+            <a href="#" class="footer-link">Careers</a>
+          </div>
                 <div class="footer-col footer-services">
                     <h4 class="footer-title">Our Services</h4>
                     <a href="services.html" class="footer-link">AI & Software Development</a>
@@ -598,3 +598,4 @@
   </footer>
 </body>
 </html>
+
