--- a/Services/AI professional/AISoftware.html
+++ b/Services/AI professional/AISoftware.html
@@ -369,6 +369,16 @@
 </head>
 
 <body>
+	<header class="header">
+        <div class="container">
+            <nav class="nav-menu">
+                <a href="../index.html" class="nav-item">Home</a>
+                <a href="about.html" class="nav-item">About</a>
+                <a href="services.html" class="nav-item">Services</a>
+                <a href="contact.html" class="nav-item">Contact</a>
+            </nav>
+        </div>
+    </header>
   <main class="main-container">
   
 		<section class="hero-video-section">
@@ -549,4 +559,5 @@
     </footer>
 </body>
 </html>
+
 
