--- a/Services/AI professional/AISoftware.html
+++ b/Services/AI professional/AISoftware.html
@@ -17,6 +17,32 @@
       box-sizing: border-box;
     }
 
+	/* --- Header & Navigation --- */
+.header {
+    padding: 24px 0;
+    background-color: #072544; /* Solid background to feel connected */
+}
+
+.nav-menu {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 25px;
+}
+
+.nav-item {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    color: #ffffff;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.nav-item:hover {
+    color: #00ffff;
+}
+
     body {
       font-family: 'Poppins', sans-serif;
       background-color: #072544;
@@ -559,5 +585,6 @@
     </footer>
 </body>
 </html>
+
 
 
