--- a/Services/Digital Marketing/DigitalMarketing.html
+++ b/Services/Digital Marketing/DigitalMarketing.html
@@ -47,6 +47,32 @@
       background-clip: text;
     }
 
+		/* --- Header & Navigation --- */
+	.header {
+	    padding: 24px 0;
+	    background-color: #072544; /* Solid background to feel connected */
+	}
+	
+	.nav-menu {
+	    display: flex;
+	    justify-content: flex-end;
+	    align-items: center;
+	    gap: 25px;
+	}
+	
+	.nav-item {
+	    font-family: 'Montserrat', sans-serif;
+	    font-size: 17px;
+	    font-weight: 400;
+	    color: #ffffff;
+	    text-decoration: none;
+	    transition: color 0.3s ease;
+	}
+	
+	.nav-item:hover {
+	    color: #00ffff;
+	}
+
     /* ====== HERO SECTION ====== */
     .hero-section {
       text-align: center;
@@ -598,4 +624,5 @@
   </footer>
 </body>
 </html>
+
 
