--- a/Services/Startup/StartupTechConsultingServices.html
+++ b/Services/Startup/StartupTechConsultingServices.html
@@ -42,6 +42,32 @@
       padding: 0 24px;
     }
 
+	/* --- Header & Navigation --- */
+	.header {
+	    padding: 24px 0;
+	    background-color: #072544; /* Solid background to feel connected */
+	}
+	
+	.nav-menu {
+	    display: flex;
+	    justify-content: flex-end;
+	    align-items: center;
+	    gap: 25px;
+	}
+	
+	.nav-item {
+	    font-family: 'Montserrat', sans-serif;
+	    font-size: 17px;
+	    font-weight: 400;
+	    color: #ffffff;
+	    text-decoration: none;
+	    transition: color 0.3s ease;
+	}
+	
+	.nav-item:hover {
+	    color: #00ffff;
+	}
+
     /* ===== HERO ===== */
     .hero-section {
       text-align:center;
@@ -676,3 +702,4 @@
   </footer>
 </body>
 </html>
+
