--- a/Services/AI professional/AISoftware.html
+++ b/Services/AI professional/AISoftware.html
@@ -400,7 +400,7 @@
 	<header class="header">
         <div class="container">
             <nav class="nav-menu">
-                <a href="../../index.html" class="nav-item">Home</a>
+                <a href="../index.html" class="nav-item">Home</a>
                 <a href="../about.html" class="nav-item">About</a>
                 <a href="../services.html" class="nav-item">Services</a>
                 <a href="../contact.html" class="nav-item">Contact</a>
@@ -587,6 +587,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
