--- a/Services/AI professional/AISoftware.html
+++ b/Services/AI professional/AISoftware.html
@@ -401,9 +401,9 @@
         <div class="container">
             <nav class="nav-menu">
                 <a href="../index.html" class="nav-item">Home</a>
-                <a href="../about.html" class="nav-item">About</a>
-                <a href="../services.html" class="nav-item">Services</a>
-                <a href="../contact.html" class="nav-item">Contact</a>
+                <a href="../../pages/about.html" class="nav-item">About</a>
+                <a href="../../pages/services.html" class="nav-item">Services</a>
+                <a href="../../pages/contact.html" class="nav-item">Contact</a>
             </nav>
         </div>
     </header>
@@ -587,6 +587,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
