--- a/Services/R&D/AIRDServicesLandingPage.html
+++ b/Services/R&D/AIRDServicesLandingPage.html
@@ -361,6 +361,16 @@
 </head>
 
 <body>
+	<header class="header">
+        <div class="container">
+            <nav class="nav-menu">
+                <a href="../..index.html" class="nav-item">Home</a>
+                <a href="../../pages/about.html" class="nav-item">About</a>
+                <a href="../../pages/services.html" class="nav-item">Services</a>
+                <a href="../../pages/contact.html" class="nav-item">Contact</a>
+            </nav>
+        </div>
+    </header>
   <main class="main-container">
   
 		<section class="hero-video-section">
@@ -555,4 +565,5 @@
   </footer>
 </body>
 </html>
+
 
