--- a/Services/Startup/StartupTechConsultingServices.html
+++ b/Services/Startup/StartupTechConsultingServices.html
@@ -397,6 +397,16 @@
 </head>
 
 <body>
+	<header class="header">
+        <div class="container">
+            <nav class="nav-menu">
+                <a href="../..index.html" class="nav-item">Home</a>
+                <a href="../../pages/about.html" class="nav-item">About</a>
+                <a href="../../pages/services.html" class="nav-item">Services</a>
+                <a href="../../pages/contact.html" class="nav-item">Contact</a>
+            </nav>
+        </div>
+    </header>
   <main class="main-container">
 
 	<section class="hero-video-section">
@@ -702,4 +712,5 @@
   </footer>
 </body>
 </html>
+
 
