--- a/Services/Webapp/WebAppDevelopmentServices.html
+++ b/Services/Webapp/WebAppDevelopmentServices.html
@@ -346,6 +346,16 @@
 </head>
 
 <body>
+	<header class="header">
+        <div class="container">
+            <nav class="nav-menu">
+                <a href="../..index.html" class="nav-item">Home</a>
+                <a href="../../pages/about.html" class="nav-item">About</a>
+                <a href="../../pages/services.html" class="nav-item">Services</a>
+                <a href="../../pages/contact.html" class="nav-item">Contact</a>
+            </nav>
+        </div>
+    </header>
   <main class="main-container">
   
 	<section class="hero-video-section">
@@ -643,3 +653,4 @@
 </body>
 
 </html>
+
