--- a/Services/Digital Marketing/DigitalMarketing.html
+++ b/Services/Digital Marketing/DigitalMarketing.html
@@ -366,7 +366,7 @@
 	<header class="header">
         <div class="container">
             <nav class="nav-menu">
-                <a href="../..index.html" class="nav-item">Home</a>
+                <a href="../../index.html" class="nav-item">Home</a>
                 <a href="../../pages/about.html" class="nav-item">About</a>
                 <a href="../../pages/services.html" class="nav-item">Services</a>
                 <a href="../../pages/contact.html" class="nav-item">Contact</a>
@@ -634,6 +634,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
