--- a/Services/R&D/AIRDServicesLandingPage.html
+++ b/Services/R&D/AIRDServicesLandingPage.html
@@ -364,7 +364,7 @@
 	<header class="header">
         <div class="container">
             <nav class="nav-menu">
-                <a href="../..index.html" class="nav-item">Home</a>
+                <a href="../../index.html" class="nav-item">Home</a>
                 <a href="../../pages/about.html" class="nav-item">About</a>
                 <a href="../../pages/services.html" class="nav-item">Services</a>
                 <a href="../../pages/contact.html" class="nav-item">Contact</a>
@@ -565,5 +565,6 @@
   </footer>
 </body>
 </html>
+
 
 
