--- a/Services/Startup/StartupTechConsultingServices.html
+++ b/Services/Startup/StartupTechConsultingServices.html
@@ -400,7 +400,7 @@
 	<header class="header">
         <div class="container">
             <nav class="nav-menu">
-                <a href="../..index.html" class="nav-item">Home</a>
+                <a href="../../index.html" class="nav-item">Home</a>
                 <a href="../../pages/about.html" class="nav-item">About</a>
                 <a href="../../pages/services.html" class="nav-item">Services</a>
                 <a href="../../pages/contact.html" class="nav-item">Contact</a>
@@ -712,5 +712,6 @@
   </footer>
 </body>
 </html>
+
 
 
