--- a/Services/AI professional/AISoftware.html
+++ b/Services/AI professional/AISoftware.html
@@ -555,11 +555,11 @@
                 <span>info@logicleafs.com</span>
               </div>
             </div>
-            <div class="social-links">
-              <a href="https://www.instagram.com/logicleafs/" target="_blank"><i class="fab fa-instagram"></i></a>
-              <a href="https://www.linkedin.com/company/logicleafs/posts/?feedView=all" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://api.whatsapp.com/send/?phone=9019225051" target="_blank"><i class="fab fa-whatsapp"></i></a>
-            </div>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/logicleafs/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/logicleafs/posts/?feedView=all" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://api.whatsapp.com/send/?phone=9019225051&text&type=phone_number&app_absent=0" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                    </div>
           </div>
 
          <div>
@@ -587,6 +587,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
