--- a/Services/AI professional/AISoftware.html
+++ b/Services/AI professional/AISoftware.html
@@ -661,7 +661,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col footer-info">
-                    <img src="../assets/logics.png" alt="Logic Leafs Logo" class="footer-logo"> 
+                    <img src="../../assets/logics.png" alt="Logic Leafs Logo" class="footer-logo"> 
                     <p class="footer-tagline">Built with Logic. Grown with Innovation.</p>
                     <p class="footer-description">
                         Next-gen technology partner transforming ideas into scalable digital solutions through AI, Blockchain, SaaS, and innovative product engineering.
@@ -693,10 +693,10 @@
 
                 <div class="footer-col footer-links">
                     <h4 class="footer-title">Quick Links</h4>
-                    <a href="about.html" class="footer-link">About</a>
-                    <a href="services.html" class="footer-link">Services</a>
-                    <a href="contact.html" class="footer-link">Contact</a>
-                    <a href="#" class="footer-link">Careers</a>
+		            <a href="../../pages/about.html" class="footer-link">About</a>
+		            <a href="../../pages/services.html" class="footer-link">Services</a>
+		            <a href="../../pages/contact.html" class="footer-link">Contact</a>
+		            <a href="#" class="footer-link">Careers</a>
                 </div>
 
                 <div class="footer-col footer-services">
@@ -717,6 +717,7 @@
     </footer>
 
 </html>
+
 
 
 
