--- a/Services/AI professional/AISoftware.html
+++ b/Services/AI professional/AISoftware.html
@@ -668,19 +668,19 @@
                     </p>
                     <div class="footer-contact-card">
                         <div class="contact-item">
-                            <img src="../assets/images/img_carbon_location_filled.png" alt="Location" width="22" height="22" />
+                            <img src="../../assets/images/img_carbon_location_filled.png" alt="Location" width="22" height="22" />
                             <span>2nd Floor, BM Habitat Mall, Jayalakshmipuram Mysore, Karnataka, 570012</span>
                         </div>
                     </div>
                    <div class="footer-contact-card">
                         <div class="contact-item">
-                            <img src="../assets/images/img_ion_call.png" alt="Phone" width="22" height="22" />
+                            <img src="../../assets/images/img_ion_call.png" alt="Phone" width="22" height="22" />
                             <span>+91 97311 95345</span>
                         </div>
                     </div>
                     <div class="footer-contact-card">
                         <div class="contact-item">
-                            <img src="../assets/images/img_ic_round_email.png" alt="Email" width="22" height="22" />
+                            <img src="../../assets/images/img_ic_round_email.png" alt="Email" width="22" height="22" />
                             <span>info@logicleafs.com</span>
                         </div>
                     </div>
@@ -701,11 +701,11 @@
 
                 <div class="footer-col footer-services">
                     <h4 class="footer-title">Our Services</h4>
-                    <a href="../Services/AI professional/index.html" class="footer-link">AI & Software Development</a>
-                    <a href="../Services/Webapp/index.html" class="footer-link">Web & App Development</a>
-                    <a href="../Services/Digital Marketing/index.html" class="footer-link">Digital Marketing</a>
-                    <a href="../Services/Startup/index.html" class="footer-link">Startup Consulting</a>
-                    <a href="../Services/R&D/index.html" class="footer-link">R&D Projects</a>
+                    <a href="../../Services/AI professional/AISoftware.html" class="footer-link">AI & Software Development</a>
+                    <a href="../../Services/Webapp/WebAppDevelopmentServices.html" class="footer-link">Web & App Development</a>
+                    <a href="../../Services/Digital Marketing/DigitalMarketing.html" class="footer-link">Digital Marketing</a>
+                    <a href="../../Services/Startup/StartupTechConsultingServices.html" class="footer-link">Startup Consulting</a>
+                    <a href="../../Services/R&D/AIRDServicesLandingPage.html" class="footer-link">R&D Projects</a>
                     <a href="contact.html" class="footer-link">Training Programs</a>
                 </div>
             </div>
@@ -717,6 +717,7 @@
     </footer>
 
 </html>
+
 
 
 
