--- a/Services/R&D/AIRDServicesLandingPage.html
+++ b/Services/R&D/AIRDServicesLandingPage.html
@@ -38,8 +38,8 @@
     }
 
     .container {
-      width: 80%;
-      max-width: 1170px;
+      width: 100%;
+      max-width: 1280px;
       margin: 0 auto;
       padding: 0 24px;
     }
@@ -299,22 +299,124 @@
       margin-right: auto;
     }
 
-      /* ===== FOOTER ===== */
-    .footer {padding:60px 0 30px;background-color:#0b2f57;margin-top:80px;}
-    .footer-content {display:grid;grid-template-columns:1fr;gap:40px;text-align:center;padding:0 24px;}
-    .footer-logo {width:150px;margin-bottom:20px;}
-    .footer-tagline {font-size:16px;color:#E6F1FF;margin-bottom:10px;}
-    .footer-description {font-size:14px;color:#adadad;max-width:400px;margin:0 auto 25px;}
-    .footer-contact-card {background-color:#1B4571;border-radius:8px;padding:12px 18px;margin-bottom:15px;max-width:350px;margin-left:auto;margin-right:auto;}
-    .contact-item {display:flex;align-items:flex-start;gap:12px;color:#E6F1FF;font-size:14px;}
-    .footer-title {font-size:18px;font-weight:600;color:#E6F1FF;margin-bottom:15px;}
-    .footer-link {font-size:14px;color:#adadad;text-decoration:none;transition:color .3s ease;display:block;margin-bottom:8px;}
-    .footer-link:hover {color:#00FFFF;}
-    .social-links {display:flex;justify-content:center;gap:20px;margin-top:25px;}
-    .social-links a {color:#ffffff;font-size:22px;transition:color .3s ease,transform .3s ease;}
-    .social-links a:hover {color:#00FFFF;transform:translateY(-3px);}
-    .footer-divider {height:1px;background-color:#2e5a8a;margin:30px 24px;}
-    .footer-copyright {text-align:center;font-size:13px;color:#adadad;}
+	 /* === FOOTER STYLES === */
+	.footer {
+	    padding: 60px 0 30px;
+	    background-color: #0b2f57;
+	}
+	
+	.footer-content {
+	    display: grid;
+	    grid-template-columns: 1fr;
+	    gap: 40px;
+	    margin-bottom: 40px;
+	    text-align: center;
+	}
+	
+	.footer-col {
+	    display: flex;
+	    flex-direction: column;
+	    align-items: center;
+	}
+	
+	.footer-logo {
+	    width: 150px;
+	    margin-bottom: 20px;
+	}
+	
+	.footer-tagline {
+	    font-size: 15px;
+	    margin-bottom: 12px;
+	    color: #E6F1FF;
+	}
+	
+	.footer-description {
+	    font-size: 14px;
+	    color: #adadad;
+	    max-width: 350px;
+	    margin: 0 auto 30px auto;
+	}
+	
+	.footer-contact-card {
+	    background-color: #1B4571;
+	    border-radius: 8px;
+	    padding: 15px 20px;
+	    margin-bottom: 15px;
+	    width: 100%;
+	    max-width: 350px;
+	    text-align: left;
+	}
+	
+	.footer-contact-card .contact-item {
+	    font-size: 15px;
+	    color: #E6F1FF;
+	    text-decoration: none;
+	    display: flex;
+	    align-items: flex-start;
+	    gap: 12px;
+	}
+	
+	.footer-contact-card .contact-item img {
+	    filter: brightness(0) invert(1);
+	    margin-top: 2px;
+	    flex-shrink: 0;
+	}
+	
+	.footer-title {
+	    font-size: 18px;
+	    font-weight: 600;
+	    color: #E6F1FF;
+	    margin-bottom: 20px;
+	    width: 100%;
+	    text-align: center;
+	}
+	
+	.footer-link {
+	    font-size: 15px;
+	    color: #adadad;
+	    text-decoration: none;
+	    margin-bottom: 10px;
+	    transition: color 0.3s ease;
+	    width: 100%;
+	}
+	
+	.footer-link:hover {
+	    color: #00FFFF;
+	}
+	
+	.footer-divider {
+	    height: 1px;
+	    background-color: #2e5a8a;
+	    margin-top: 40px;
+	    margin-bottom: 30px;
+	}
+	
+	.footer-copyright {
+	    text-align: center;
+	    font-size: 14px;
+	    color: #adadad;
+	}
+	
+	.social-links {
+	  display: flex;
+	  justify-content: center;
+	  gap: 20px;
+	  margin-top: 25px;
+	  width: 100%;
+	  max-width: 350px;
+	}
+	
+	.social-links a {
+	  color: #ffffff;
+	  font-size: 24px;
+	  text-decoration: none;
+	  transition: color 0.3s ease, transform 0.3s ease;
+	}
+	
+	.social-links a:hover {
+	  color: #00FFFF;
+	  transform: translateY(-3px);
+	}
 
     /* ====== ANIMATIONS ====== */
     @keyframes fadeInUp {
@@ -565,6 +667,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
