--- a/Services/Webapp/WebAppDevelopmentServices.html
+++ b/Services/Webapp/WebAppDevelopmentServices.html
@@ -609,49 +609,67 @@
       <a href="#contact" class="btn-primary">Get Free Consultation</a>
     </div>
   </section>
-
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-col footer-info">
-          <img src="../../assets/logics.png" alt="Logic Leafs Logo" class="footer-logo">
-          <p class="footer-tagline">Built with Logic. Grown with Innovation.</p>
-          <p class="footer-description">Next-gen technology partner transforming ideas into scalable digital solutions through AI, Blockchain, SaaS, and innovative product engineering.</p>
-          <div class="footer-contact-card"><div class="contact-item"><img src="../../assets/images/img_carbon_location_filled.png" alt="Location" width="22" height="22"/><span>2nd Floor, BM Habitat Mall, Jayalakshmipuram Mysore, Karnataka, 570012</span></div></div>
-          <div class="footer-contact-card"><div class="contact-item"><img src="../../assets/images/img_ion_call.png" alt="Phone" width="22" height="22"/><span>+91 97311 95345</span></div></div>
-          <div class="footer-contact-card"><div class="contact-item"><img src="../../assets/images/img_ic_round_email.png" alt="Email" width="22" height="22"/><span>info@logicleafs.com</span></div></div>
-          <div class="social-links">
-            <a href="https://www.instagram.com/logicleafs/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/logicleafs/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://api.whatsapp.com/send/?phone=9019225051" target="_blank"><i class="fab fa-whatsapp"></i></a>
-          </div>
-        </div>
-
-        <div class="footer-col footer-links">
-          <h4 class="footer-title">Quick Links</h4>
-          <a href="about.html" class="footer-link">About</a>
-          <a href="services.html" class="footer-link">Services</a>
-          <a href="contact.html" class="footer-link">Contact</a>
-          <a href="#" class="footer-link">Careers</a>
-        </div>
-
-        <div class="footer-col footer-services">
-          <h4 class="footer-title">Our Services</h4>
-          <a href="services.html" class="footer-link">AI & Software Development</a>
-          <a href="services.html" class="footer-link">Web & App Development</a>
-          <a href="services.html" class="footer-link">Digital Marketing</a>
-          <a href="services.html" class="footer-link">Startup Consulting</a>
-          <a href="services.html" class="footer-link">R&D Projects</a>
-          <a href="services.html" class="footer-link">Training Programs</a>
-        </div>
-      </div>
-	  </div>
-      <div class="footer-divider"></div>
-      <p class="footer-copyright">© 2024 Logic Leafs Private Limited. All rights reserved.</p>
-
-  </footer>
 </body>
 
+ <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-col footer-info">
+                    <img src="../../assets/logics.png" alt="Logic Leafs Logo" class="footer-logo"> 
+                    <p class="footer-tagline">Built with Logic. Grown with Innovation.</p>
+                    <p class="footer-description">
+                        Next-gen technology partner transforming ideas into scalable digital solutions through AI, Blockchain, SaaS, and innovative product engineering.
+                    </p>
+                    <div class="footer-contact-card">
+                        <div class="contact-item">
+                            <img src="../../assets/images/img_carbon_location_filled.png" alt="Location" width="22" height="22" />
+                            <span>2nd Floor, BM Habitat Mall, Jayalakshmipuram Mysore, Karnataka, 570012</span>
+                        </div>
+                    </div>
+                   <div class="footer-contact-card">
+                        <div class="contact-item">
+                            <img src="../../assets/images/img_ion_call.png" alt="Phone" width="22" height="22" />
+                            <span>+91 97311 95345</span>
+                        </div>
+                    </div>
+                    <div class="footer-contact-card">
+                        <div class="contact-item">
+                            <img src="../../assets/images/img_ic_round_email.png" alt="Email" width="22" height="22" />
+                            <span>info@logicleafs.com</span>
+                        </div>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/logicleafs/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/logicleafs/posts/?feedView=all" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://api.whatsapp.com/send/?phone=9019225051&text&type=phone_number&app_absent=0" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                    </div>
+                </div>
+
+                <div class="footer-col footer-links">
+                    <h4 class="footer-title">Quick Links</h4>
+		            <a href="../../pages/about.html" class="footer-link">About</a>
+		            <a href="../../pages/services.html" class="footer-link">Services</a>
+		            <a href="../../pages/contact.html" class="footer-link">Contact</a>
+		            <a href="#" class="footer-link">Careers</a>
+                </div>
+
+                <div class="footer-col footer-services">
+                    <h4 class="footer-title">Our Services</h4>
+                    <a href="../../Services/AI professional/AISoftware.html" class="footer-link">AI & Software Development</a>
+                    <a href="../../Services/Webapp/WebAppDevelopmentServices.html" class="footer-link">Web & App Development</a>
+                    <a href="../../Services/Digital Marketing/DigitalMarketing.html" class="footer-link">Digital Marketing</a>
+                    <a href="../../Services/Startup/StartupTechConsultingServices.html" class="footer-link">Startup Consulting</a>
+                    <a href="../../Services/R&D/AIRDServicesLandingPage.html" class="footer-link">R&D Projects</a>
+                    <a href="contact.html" class="footer-link">Training Programs</a>
+                </div>
+            </div>
+            <div class="footer-divider"></div>
+            <p class="footer-copyright">
+                © 2024 Logic Leafs Private Limited. All rights reserved.
+            </p>
+        </div>
+    </footer>
 </html>
+
 
 
