--- a/Services/Webapp/WebAppDevelopmentServices.html
+++ b/Services/Webapp/WebAppDevelopmentServices.html
@@ -319,131 +319,155 @@
     .btn-primary:hover {transform:scale(1.05);box-shadow:0 8px 20px rgba(191,0,255,0.3);}
 
    /* === FOOTER STYLES === */
-.footer {
-    padding: 60px 0 30px;
-    background-color: #0b2f57;
-}
-
-.footer-content {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 40px;
-    margin-bottom: 40px;
-    text-align: center;
-}
-
-.footer-col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.footer-logo {
-    width: 150px;
-    margin-bottom: 20px;
-}
-
-.footer-tagline {
-    font-size: 15px;
-    margin-bottom: 12px;
-    color: #E6F1FF;
-}
-
-.footer-description {
-    font-size: 14px;
-    color: #adadad;
-    max-width: 350px;
-    margin: 0 auto 30px auto;
-}
-
-.footer-contact-card {
-    background-color: #1B4571;
-    border-radius: 8px;
-    padding: 15px 20px;
-    margin-bottom: 15px;
-    width: 100%;
-    max-width: 350px;
-    text-align: left;
-}
-
-.footer-contact-card .contact-item {
-    font-size: 15px;
-    color: #E6F1FF;
-    text-decoration: none;
-    display: flex;
-    align-items: flex-start;
-    gap: 12px;
-}
-
-.footer-contact-card .contact-item img {
-    filter: brightness(0) invert(1);
-    margin-top: 2px;
-    flex-shrink: 0;
-}
-
-.footer-title {
-    font-size: 18px;
-    font-weight: 600;
-    color: #E6F1FF;
-    margin-bottom: 20px;
-    width: 100%;
-    text-align: center;
-}
-
-.footer-link {
-    font-size: 15px;
-    color: #adadad;
-    text-decoration: none;
-    margin-bottom: 10px;
-    transition: color 0.3s ease;
-    width: 100%;
-}
-
-.footer-link:hover {
-    color: #00FFFF;
-}
-
-.footer-divider {
-    height: 1px;
-    background-color: #2e5a8a;
-    margin-top: 40px;
-    margin-bottom: 30px;
-}
-
-.footer-copyright {
-    text-align: center;
-    font-size: 14px;
-    color: #adadad;
-}
-
-.social-links {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 25px;
-  width: 100%;
-  max-width: 350px;
-}
-
-.social-links a {
-  color: #ffffff;
-  font-size: 24px;
-  text-decoration: none;
-  transition: color 0.3s ease, transform 0.3s ease;
-}
-
-.social-links a:hover {
-  color: #00FFFF;
-  transform: translateY(-3px);
-}
+	.footer {
+	    padding: 60px 0 30px;
+	    background-color: #0b2f57;
+	}
+	
+	.footer-content {
+	    display: grid;
+	    grid-template-columns: 1fr;
+	    gap: 40px;
+	    margin-bottom: 40px;
+	    text-align: center;
+	}
+	
+	.footer-col {
+	    display: flex;
+	    flex-direction: column;
+	    align-items: center;
+	}
+	
+	.footer-logo {
+	    width: 150px;
+	    margin-bottom: 20px;
+	}
+	
+	.footer-tagline {
+	    font-size: 15px;
+	    margin-bottom: 12px;
+	    color: #E6F1FF;
+	}
+	
+	.footer-description {
+	    font-size: 14px;
+	    color: #adadad;
+	    max-width: 350px;
+	    margin: 0 auto 30px auto;
+	}
+	
+	.footer-contact-card {
+	    background-color: #1B4571;
+	    border-radius: 8px;
+	    padding: 15px 20px;
+	    margin-bottom: 15px;
+	    width: 100%;
+	    max-width: 350px;
+	    text-align: left;
+	}
+	
+	.footer-contact-card .contact-item {
+	    font-size: 15px;
+	    color: #E6F1FF;
+	    text-decoration: none;
+	    display: flex;
+	    align-items: flex-start;
+	    gap: 12px;
+	}
+	
+	.footer-contact-card .contact-item img {
+	    filter: brightness(0) invert(1);
+	    margin-top: 2px;
+	    flex-shrink: 0;
+	}
+	
+	.footer-title {
+	    font-size: 18px;
+	    font-weight: 600;
+	    color: #E6F1FF;
+	    margin-bottom: 20px;
+	    width: 100%;
+	    text-align: center;
+	}
+	
+	.footer-link {
+	    font-size: 15px;
+	    color: #adadad;
+	    text-decoration: none;
+	    margin-bottom: 10px;
+	    transition: color 0.3s ease;
+	    width: 100%;
+	}
+	
+	.footer-link:hover {
+	    color: #00FFFF;
+	}
+	
+	.footer-divider {
+	    height: 1px;
+	    background-color: #2e5a8a;
+	    margin-top: 40px;
+	    margin-bottom: 30px;
+	}
+	
+	.footer-copyright {
+	    text-align: center;
+	    font-size: 14px;
+	    color: #adadad;
+	}
+	
+	.social-links {
+	  display: flex;
+	  justify-content: center;
+	  gap: 20px;
+	  margin-top: 25px;
+	  width: 100%;
+	  max-width: 350px;
+	}
+	
+	.social-links a {
+	  color: #ffffff;
+	  font-size: 24px;
+	  text-decoration: none;
+	  transition: color 0.3s ease, transform 0.3s ease;
+	}
+	
+	.social-links a:hover {
+	  color: #00FFFF;
+	  transform: translateY(-3px);
+	}
 
     @media(min-width:768px){
       .hero-title{font-size:52px;}
       .cta-title{font-size:42px;}
       .process-grid{grid-template-columns:repeat(4,1fr);}
-      .footer-content{grid-template-columns:2fr 1fr 1.5fr;text-align:left;gap:50px;padding:0 48px;}
-      .social-links{justify-content:flex-start;}
     }
+
+	  @media (min-width: 768px) {
+    .services-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .section-title {
+        font-size: 45px;
+    }
+    .footer-content {
+        grid-template-columns: 2fr 1fr 1.5fr;
+        gap: 50px;
+        text-align: left;
+    }
+    .footer-col {
+        align-items: flex-start;
+    }
+    .footer-description {
+        margin-left: 0;
+    }
+    .footer-title, .footer-link {
+        text-align: left;
+    }
+    .social-links {
+        justify-content: flex-start;
+    }
+}
   </style>
 </head>
 
@@ -772,6 +796,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
