--- a/Services/AI professional/AISoftware.html
+++ b/Services/AI professional/AISoftware.html
@@ -653,7 +653,7 @@
       <div class="cta-card">
         <h2 class="cta-title">Ready to <span class="gradient-text-primary">Start Your Project?</span></h2>
         <p class="cta-subtitle">Get a free consultation and project estimate. Let's discuss how we can bring your vision to life.</p>
-        <a href="#contact" class="btn-secondary">Get Free Consultation</a>
+        <a href="../../pages/contact.html" class="btn-secondary">Get Free Consultation</a>
       </div>
     </section>  
 </body>
@@ -717,6 +717,7 @@
     </footer>
 
 </html>
+
 
 
 
