--- a/Services/Digital Marketing/DigitalMarketing.html
+++ b/Services/Digital Marketing/DigitalMarketing.html
@@ -649,14 +649,14 @@
 	<br><br>
 
     <!-- CTA -->
-    <section class="cta-section">
+    <section class="cta-section" id="consultation">
       <h2 class="cta-title">
         Ready to Elevate Your <span class="gradient-text">Digital Marketing</span> Strategy?
       </h2>
       <p class="cta-subtitle">
         Schedule a free consultation with our experts to discuss how we can help your business grow.
       </p>
-      <a href="#contact" class="btn-primary">Book a Free Consultation</a>
+      <a href="../../pages/contact.html" class="btn-primary">Book a Free Consultation</a>
     </section>
   </main>
 </body>
@@ -720,6 +720,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
