--- a/Services/R&D/AIRDServicesLandingPage.html
+++ b/Services/R&D/AIRDServicesLandingPage.html
@@ -482,7 +482,7 @@
 			<p class="hero-video-subtitle">
 			  Our R&D team specializes in creating innovative AI technologies that push the boundaries of what's possible. From voice assistants to automation systems, we build the future today.
 			</p>
-			<a href="#services" class="btn-primary">Start your Project
+			<a href="#consultation" class="btn-primary">Start your Project
 			<img src="assets/images/img_arrowright.svg" alt="Arrow right" class="btn-icon" />
 		  </a>
 		  </div>
@@ -594,14 +594,14 @@
    
   </main>
    <!-- CTA -->
-    <section class="cta-section">
+    <section class="cta-section" id="consultation">
       <h2 class="cta-title">
         Ready to <span class="gradient-text">Build the Future with AI?</span>
       </h2>
       <p class="cta-subtitle">
         Let's discuss your AI project and explore how our experimental technologies can transform your business.
       </p>
-      <a href="#contact" class="btn-primary">Book a Free Consultation</a>
+      <a href="../../pages/contact.html" class="btn-primary">Book a Free Consultation</a>
     </section>  
 </body>
 
@@ -664,6 +664,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
