--- a/Services/Startup/StartupTechConsultingServices.html
+++ b/Services/Startup/StartupTechConsultingServices.html
@@ -541,7 +541,7 @@
 		<p class="hero-video-subtitle">
 		  From concept to scale, we provide end-to-end technical and strategic support for ambitious startups and entrepreneurs.
 		</p>
-		 <a href="#contact" class="hero-button">Start your project
+		 <a href="#consultation" class="hero-button">Start your project
 		  <img src="assets/images/img_arrowright.svg" alt="Arrow right" class="btn-icon" />
 		  </a>
 	  </div>
@@ -761,11 +761,11 @@
   </main>
 
   <!-- CTA (moved outside main for full width) -->
-  <section class="cta-section">
+  <section class="cta-section" id="consultation">
     <div class="container">
       <h2 class="cta-title">Ready to <span class="gradient-text">Start Your Project?</span></h2>
       <p class="cta-subtitle">Get a free consultation and project estimate. Let's discuss how we can bring your vision to life.</p>
-      <a href="#contact" class="btn-primary">Get Free Consultation</a>
+      <a href="../../pages/contact.html" class="btn-primary">Get Free Consultation</a>
     </div>
   </section>
 </body>
@@ -829,6 +829,7 @@
         </div>
     </footer>
 </html>
+
 
 
 
