--- a/pages/about.html
+++ b/pages/about.html
@@ -15,12 +15,21 @@
 <body>
     <header class="header">
         <div class="container header-container">
+            <a href="../index.html" class="logo">
+                <img src="../assets/logics.png" alt="Logic Leafs Logo" style="height: 60px; width: auto; display: block;">
+            </a>
+
             <nav class="nav-menu">
+                <button class="close-menu" aria-label="Close navigation menu">&times;</button>
                 <a href="../index.html" class="nav-item">Home</a>
                 <a href="about.html" class="nav-item active">About</a>
                 <a href="services.html" class="nav-item">Services</a>
                 <a href="contact.html" class="nav-item">Contact</a>
             </nav>
+
+            <button class="hamburger-menu" aria-label="Open navigation menu">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
     </header>
 
@@ -178,5 +187,21 @@
             </p>
         </div>
     </footer>
-</body>
+    
+    <script>
+        const navMenu = document.querySelector('.nav-menu');
+        const hamburgerMenu = document.querySelector('.hamburger-menu');
+        const closeMenu = document.querySelector('.close-menu');
+
+        // Open navigation menu
+        hamburgerMenu.addEventListener('click', () => {
+            navMenu.classList.add('active');
+        });
+
+        // Close navigation menu
+        closeMenu.addEventListener('click', () => {
+            navMenu.classList.remove('active');
+        });
+    </script>
+    </body>
 </html>
